--- a/src/.ssh/config
+++ b/src/.ssh/config
@@ -29,6 +29,11 @@ Host vpn
   IdentityFile "/Users/archons/.ssh/aws-vpn.pem"
   User ec2-user
 
+Host chat-dev
+  HostName ec2-18-188-161-144.us-east-2.compute.amazonaws.com
+  IdentityFile "/Users/archons/.ssh/aws-vpn.pem"
+  User ec2-user
+
 Host tvpn
   HostName aws-vpn
   IdentityFile "/Users/archons/.ssh/aws-vpn.pem"
